@@ -2,6 +2,6 @@ export BM_UPLOAD_METHOD="rsync"
 export BM_UPLOAD_HOSTS=""
 export BM_UPLOAD_DESTINATION="/tmp/uploads"
 
-if ! [ -d $BM_UPLOAD_DESTINATION ]; then
+if [ ! -d $BM_UPLOAD_DESTINATION ]; then
   mkdir $BM_UPLOAD_DESTINATION
 fi
